# marketplace

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  example.env  justfile
infra/env/: example.auth.env  example.auth_db.env  example.auth_users_db.env  example.catalog.env  example.catalog_db.env  example.kafka.env  example.kafka_ui.env  example.notifications.env  example.notifications_db.env  example.orders.env  example.orders_payments_db.env  example.payments.env  example.recommendation.env  example.users.env  example.users_db.env
infra/loki/: local-config.yml
infra/prometheus/: prometheus.yml
infra/promtail/: config.yml
services/auth/: Dockerfile  README.md  pyproject.toml  pyrightconfig.json
services/auth/migrations/: env.py
services/auth/migrations/versions/: ae7085b51138_create_account.py
services/auth/src/: config.py  exceptions.py  services.py
services/auth/src/application/: handlers.py
services/auth/src/domain/: entities.py  exceptions.py  ports.py  primitives.py  value_objects.py
services/auth/src/domain/policies/: password.py
services/auth/src/domain/services/: __init__.py  login.py
services/auth/src/infra/: constants.py  dto.py  factories.py
services/auth/src/infra/claims/: value_objects.py
services/auth/src/infra/crypto/: bcrypt.py
services/auth/src/infra/jwt_codec/: jose.py
services/auth/src/infra/orm/: session.py
services/auth/src/infra/orm/models/: __init__.py  account.py  refresh_token.py
services/auth/src/presentation/: dependencies.py  main.py
services/auth/src/presentation/api/: router.py
services/auth/tests/integration/: conftest.py
services/auth/tests/integration/services/: test_auth_service.py
services/auth/tests/unit/: conftest.py
services/auth/tests/unit/claims/: test_factory.py
services/auth/tests/unit/codecs/: test_jose_codec.py
services/auth/tests/unit/utils/: test_now_ts.py
services/catalog/: pyproject.toml
services/core/: README.md  __init__.py  justfile  pyproject.toml
services/core/src/: __init__.py
services/core/src/core/exceptions/: __init__.py
services/core/src/core/mixins/: models.py
services/core/src/core/orm/django/: __init__.py  mixins.py
services/core/src/core/orm/sqlalchemy/: mixins.py
services/core/src/core/orm/sqlmodel/: __init__.py  mixins.py
services/core/src/core/pagination/: pydantic.py
services/core/src/core/utils/: libraries.py
services/core/src/core/web/fastapi/: __init__.py  healthcheck.py  pagination.py
services/notifications/: pyproject.toml
services/orders/: Dockerfile  pyproject.toml
services/payments/: Dockerfile  pyproject.toml
services/recommendations/: .dockerignore  Cargo.toml  Dockerfile  Readme.md
services/users/: Dockerfile  Makefile  README.md  healthcheck.sh  justfile  pyproject.toml  test.py
services/users/doc/adr/: 0001_sharing_core.md  0002_sharing_common_files.md
services/users/migrations/: env.py
services/users/migrations/versions/: bf5ac6442fcd_init.py
services/users/src/: config.py  constants.py  database.py  exceptions.py  main.py  models.py
services/users/src/addresses/: constants.py  models.py
services/users/src/users/: dependencies.py  models.py  repositories.py  router.py  schemas.py  services.py
services/users/tests/integration/: context.py
