[project]
name = "users"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "uvicorn (>=0.36.0,<0.37.0)",
    "sqlmodel (>=0.0.25,<0.0.26)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "prometheus-client (>=0.23.1,<0.24.0)",
    "opentelemetry-instrumentation-fastapi (>=0.58b0,<0.59)",
    "opentelemetry-instrumentation-httpx (>=0.58b0,<0.59)",
    "core (>= 0.4.0,<1.0.0)",
    "fastapi[standard]>=0.117.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.uv.sources]
pytest = { index = "internal" }
fastapi = { index = "internal" }

[[tool.uv.index]]
name = "internal"
url = "http://localhost:8010/simple/"
default = true
